--- a/style.css
+++ b/style.css
@@ -231,16 +231,16 @@ button:disabled {
 
 .playlist-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsivo: número de colunas adaptável */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     padding: 0 20px;
 }
 
 .player {
-    background-color: #2C2C2E; /* Fundo escuro para os players */
+    background-color: #2C2C2E;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4); /* Sombra suave */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -250,7 +250,7 @@ video{
 
 .player:hover {
     transform: translateY(-5px);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6); /* Sombra mais intensa ao passar o mouse */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
 }
 
 .player h3 {
